20050515
 - (dtucker) [openbsd-compat/getrrsetbyname.c] Use _compat_res instead of
   _res, prevents problems on some platforms that have _res as a global but
   don't have getrrsetbyname(), eg IRIX 5.3.  Found and tested by
   georg.schwarz at freenet.de, ok djm@.
 - (dtucker) [defines.h] Find a value for IOV_MAX or use a conservative
   default.  Patch originally from tim@, ok djm

20050506
 - (dtucker) OpenBSD CVS Syn
   - dtucker@cvs.openbsd.org 2006/04/25 08:02:27
     [authfile.c authfile.h sshconnect2.c ssh.c sshconnect1.c]
     Prevent ssh from trying to open private keys with bad permissions more than
     once or prompting for their passphrases (which it subsequently ignores
     anyway), similar to a previous change in ssh-add.  bz #1186, ok djm@
   - djm@cvs.openbsd.org 2006/05/04 14:55:23
     [dh.c]
     tighter DH exponent checks here too; feedback and ok markus@
   - djm@cvs.openbsd.org 2006/04/01 05:37:46
     [OVERVIEW]
     $OpenBSD$ in here too
   - dtucker@cvs.openbsd.org 2006/05/06 08:35:40
     [auth-krb5.c]
     Add $OpenBSD$ in comment here too

20060504
 - (dtucker) [auth-pam.c groupaccess.c monitor.c monitor_wrap.c scard-opensc.c
   session.c ssh-rand-helper.c sshd.c openbsd-compat/bsd-cygwin_util.c
   openbsd-compat/setproctitle.c] Convert malloc(foo*bar) -> calloc(foo,bar)
   in Portable-only code; since calloc zeros, remove now-redundant memsets.
   Also add a couple of sanity checks.  With & ok djm@

20060503
 - (dtucker) [packet.c] Remove in_systm.h since it's also in includes.h
   and double including it on IRIX 5.3 causes problems.  From Georg Schwarz,
   "no objections" tim@

20060423
 - (djm) OpenBSD CVS Sync
   - deraadt@cvs.openbsd.org 2006/04/01 05:42:20
     [scp.c]
     minimal lint cleanup (unused crud, and some size_t); ok djm
   - djm@cvs.openbsd.org 2006/04/01 05:50:29
     [scp.c]
     xasprintification; ok deraadt@
   - djm@cvs.openbsd.org 2006/04/01 05:51:34
     [atomicio.c]
     ANSIfy; requested deraadt@